# OS_labs

./: README.md
lab-1/: CMakeLists.txt  main.cpp
lab-1/include/: utils.hpp
lab-1/src/: parent.cpp  utils.cpp
lab-1/tests/: tests.cpp
lab-2/: CMakeLists.txt
lab-2/src/: my_solution.cpp
